<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="Reglages" >
        <ListPreference
            android:entries="@array/filterSize_listEntries"
            android:entryValues="@array/filterSize_listValues"
            android:key="pref_filterSize"
            android:title="@string/filterSize_title"
            android:summary="@string/filterSize_summary" >

        </ListPreference>
        <ListPreference
            android:entries="@array/seuilBruit_listEntries"
            android:entryValues="@array/seuilBruit_listValues"
            android:key="pref_seuilBruit"
            android:title="@string/seuilBruit_title"
            android:summary="@string/seuilBruit_summary" >
        </ListPreference>

    </PreferenceCategory>

</PreferenceScreen>