<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_app"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".IHMActivity" >

    <LinearLayout android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" >
        <requestFocus />
    </LinearLayout>

     <EditText
         android:id="@+id/status_text"
         android:cursorVisible="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:inputType="text"
         android:text="@string/recording"
         android:textColor="#000000" >
         <!--<requestFocus />-->

     </EditText> 

     <!-- texte: Tablatures    OK-->
     
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/startTablature"
         android:layout_centerHorizontal="true" >

         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Avancement"
             android:textColor="#ffffff" />
     </ScrollView>
     
     <!-- texte: Lecture    OK-->
     
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/startRecord">

     </ScrollView>
     
     <!-- texte:  Enregistrer    OK-->
     
       <ScrollView
         android:id="@+id/scrollView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/startRecord"
         android:layout_centerHorizontal="true" >

         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Enregistrement"
             android:textColor="#ffffff" />
     </ScrollView> 
     
    <!-- Text: Calcul Tablature     MARCHE PAS  
    
    	<ScrollView
         android:id="@+id/scrollView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/startYin"
         android:layout_centerHorizontal="true" >

         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Calcul"
             android:textColor="#ffffff" />
     </ScrollView> -->
     
   

     <ImageButton
         android:id="@+id/startTablature"
         android:layout_width="70dip"
         android:layout_height="50dip"
         android:layout_alignLeft="@+id/scrollView1"
         android:layout_alignRight="@+id/scrollView1"
         android:layout_marginTop="47dp"
         android:background="@drawable/tablature"
         android:contentDescription="@string/startTablature"
         android:onClick="onTablature"
         android:layout_below="@+id/startRecord" />

    <ImageButton
         android:id="@+id/startRecord"
         android:layout_width="70dip"
         android:layout_height="50dip"
         android:layout_below="@+id/status_text"
         android:layout_marginTop="18dp"
         android:background="@drawable/oldmic"
         android:contentDescription="@string/record"
         android:onClick="onRecord"
         android:layout_alignLeft="@+id/scrollView1"
         android:layout_alignRight="@+id/startTablature" />

    <!-- <ImageButton
         android:id="@+id/startYin"
         android:layout_width="50dip"
         android:layout_height="50dip"
         android:layout_alignLeft="@+id/startRecord"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/scrollView1"
         android:layout_marginBottom="17dp"
         android:background="@drawable/yin"
         android:contentDescription="@string/yin"
         android:onClick="onYin"
         android:scaleType="center" />
-->
</RelativeLayout>